<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/loginbutton"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="76dp"
        android:text="@string/login_text"
        android:textSize="60sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/emailtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="211dp"
        android:text="@string/emailtext"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/passwordtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="329dp"
        android:text="@string/passwordtext"
        android:textSize="24sp" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="105dp"
        android:layout_height="88dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="274dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/tour_picture"
        android:src="@drawable/tdf_orig" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="324dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="39dp"
        android:layout_marginBottom="303dp"
        android:autofillHints="autofill:password"
        android:ems="10"
        android:hint="@string/passwordtext"
        android:inputType="textPassword"
        android:visibility="visible" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="324dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="250dp"
        android:autofillHints="autofill:emailAddress"
        android:ems="10"
        android:hint="@string/editemail"
        android:inputType="textEmailAddress"
        android:visibility="visible" />

    <Button
        android:id="@+id/button"
        android:layout_width="147dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="123dp"
        android:layout_marginBottom="162dp"
        android:backgroundTint="#FEBE54"
        android:fontFamily="sans-serif-light"
        android:hint="@string/login_button"
        android:text="@string/login_button"
        android:textSize="16sp" />
</RelativeLayout>