<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="105dp"
        android:layout_height="88dp"
        android:layout_marginStart="274dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="31dp"
        android:contentDescription="@string/tour_picture"
        android:src="@drawable/tdf_orig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="76dp"
        android:text="@string/signup_button"
        android:textSize="60sp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailtext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="208dp"
        android:text="@string/emailtext"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEmail2"
        android:layout_width="307dp"
        android:layout_height="60dp"
        android:layout_marginTop="252dp"
        android:autofillHints="autofill:emailAddress"
        android:ems="10"
        android:hint="@string/editemail"
        android:inputType="textEmailAddress"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/passwordtext2"
        app:layout_constraintStart_toStartOf="@+id/emailtext2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61" />

    <TextView
        android:id="@+id/passwordtext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:layout_marginBottom="14dp"
        android:text="@string/passwordtext"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword2"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <EditText
        android:id="@+id/editTextPassword2"
        android:layout_width="311dp"
        android:layout_height="53dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="312dp"
        android:autofillHints="autofill:passwordd"
        android:ems="10"
        android:hint="@string/passwordtext"
        android:inputType="textPassword"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/passwordtext2"
        app:layout_constraintTop_toBottomOf="@+id/passwordtext2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="164dp"
        android:layout_height="77dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#FEBE54"
        android:fontFamily="sans-serif-light"
        android:hint="@string/login_button"
        android:text="@string/signup_button"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword2" />

</androidx.constraintlayout.widget.ConstraintLayout>